Start splitting up spring-boot